@@ -14,6 +14,14 @@ configurations {
     }
 }
 
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).all {
+    jvmArgs += '--enable-preview'
+}
+
 repositories {
     mavenCentral()
 }
